--- a/css/zoeken.css
+++ b/css/zoeken.css
@@ -22,9 +22,9 @@
 }
 
 /* FIX THIS GLOBALLY */
-.material-icons.md-48 {
+/* .page-header > .material-icons.md-48 {
     margin-left: 3.5vw;
-}
+} */
 
 
 
